# raspberryPi_gateway

./: CMakeLists.txt  README.md  fix_i18n.sh  fix_libs.sh  generar_configs.sh  install_lvgl.sh  machine_config.json  machine_config.json.example  ordenes.json  setup_project.sh  state.json  test_websocket  test_websocket.c
.github/: copilot-instructions.md
Guia/: API_REFERENCE.md  BUILD_AND_RUN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.txt  QUICKSTART_WEBSOCKET.md  README_WEBSOCKET.md  START_HERE.md  WEBSOCKET_FIXES.md  WEBSOCKET_IMPLEMENTATION_COMPLETE.md  WEBSOCKET_IMPLEMENTATION_REPORT.md  WEBSOCKET_INTEGRATION.md
gcode_files/: cinnamonroll.nc  corte_pesado.gcode  espiral.nc  prueba_corte.gcode
lib/: lv_drv_conf.h
src/: lv_conf.h  main.c
src/aws/: aws_service.c  aws_service.h  sync_cloud.py
src/config/: machine_config.c  machine_config.h
src/files/: file_manager.c  file_manager.h
src/logger/: logger.c  logger.h
src/mqtt/: mqtt_service.c  mqtt_service.h
src/ui/: ui_events.c  ui_events.h  ui_helpers.c  ui_logic.c  ui_logic.h  ui_manager.c  ui_manager.h
src/ui/screens/: ui_main.c
src/websocket/: fluidnc_formatter.c  fluidnc_formatter.h  websocket_cmd.c  websocket_cmd.h
